# MoleWorld-5.5.0-touchHLE-offline

./: .gitattributes  .gitignore  NOTICE.md  README.md  RELEASE_NOTES_v0.0.1-beta.md  RELEASE_NOTES_v0.0.2-beta.md  RELEASE_NOTES_v0.0.4-beta.md  RELEASE_NOTES_v0.0.5-beta.md  启动摩尔庄园-iPhone版.command  启动摩尔庄园-锁定比例.command  启动摩尔庄园.command  摩尔庄园 5.5.0 无限贝壳 本地占卜 商城去除VIP购买等级要求 去除越狱检测_副本.ipa  摩尔庄园1.1.5(2012).ipa
fresh-port/20-touchHLE-src/touchHLE/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  OPTIONS_HELP.txt  README.md  build.rs  touchHLE_default_options.txt
fresh-port/20-touchHLE-src/touchHLE/.github/workflows/: touchHLE_release.yml
fresh-port/20-touchHLE-src/touchHLE/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
fresh-port/20-touchHLE-src/touchHLE/android/app/: build.gradle.kts  moleworld-release.p12
fresh-port/20-touchHLE-src/touchHLE/android/gradle/wrapper/: gradle-wrapper.properties
fresh-port/20-touchHLE-src/touchHLE/dev-docs/: building.md  debugging.md
fresh-port/20-touchHLE-src/touchHLE/dev-scripts/: .gitignore  log-unimplemented.sh  make-ios-ipa.sh  make-macos-bundle.sh  make-windows-bundle.sh  prepare-release.sh
fresh-port/20-touchHLE-src/touchHLE/dev-scripts/linux/: 启动游戏.sh  如何运行.txt  安装到应用菜单.sh
fresh-port/20-touchHLE-src/touchHLE/src/: abi.rs  audio.rs  bin.rs  bundle.rs  cpu.rs  debug.rs  dyld.rs  environment.rs  font.rs  frameworks.rs  fs.rs  gdb.rs  gles.rs  image.rs  lib.rs  libc.rs  licenses.rs  log.rs  mach_o.rs  mem.rs  mole_cheats.rs  mole_diag.rs  mole_menu.rs  mole_sysinfo.rs  objc.rs  options.rs  paths.rs  save_reset.rs  stack.rs  window.rs
fresh-port/20-touchHLE-src/touchHLE/src/audio/: openal.rs  symphonia_formats.rs
fresh-port/20-touchHLE-src/touchHLE/src/audio/openal_soft_wrapper/: build.rs  lib.rs
fresh-port/20-touchHLE-src/touchHLE/src/cpu/dynarmic_wrapper/: build.rs  lib.cpp
fresh-port/20-touchHLE-src/touchHLE/src/dyld/: dylib_list.rs
fresh-port/20-touchHLE-src/touchHLE/src/environment/: app_picker.rs  mutex.rs
fresh-port/20-touchHLE-src/touchHLE/src/frameworks/: audio_toolbox.rs  avfoundation.rs  core_animation.rs  core_audio_types.rs  core_foundation.rs  core_graphics.rs  core_location.rs  core_motion.rs  foundation.rs  game_kit.rs  media_player.rs  message_ui.rs  openal.rs  opengles.rs  store_kit.rs  system_configuration.rs  uikit.rs
fresh-port/20-touchHLE-src/touchHLE/src/frameworks/audio_toolbox/: audio_components.rs  audio_file.rs  audio_queue.rs  audio_services.rs  audio_session.rs  audio_unit.rs  extended_audio_file.rs
fresh-port/20-touchHLE-src/touchHLE/src/frameworks/avfoundation/: av_audio_player.rs  av_audio_session.rs
fresh-port/20-touchHLE-src/touchHLE/src/frameworks/core_animation/: animation.rs  ca_animation.rs  ca_display_link.rs  ca_eagl_layer.rs  ca_layer.rs  ca_media_timing_function.rs  ca_transaction.rs  composition.rs
fresh-port/20-touchHLE-src/touchHLE/src/frameworks/core_foundation/: cf_allocator.rs  cf_array.rs  cf_bundle.rs  cf_data.rs  cf_dictionary.rs  cf_locale.rs  cf_number.rs  cf_preferences.rs  cf_property_list.rs  cf_run_loop.rs  cf_run_loop_timer.rs  cf_socket.rs  (+3 more)
fresh-port/20-touchHLE-src/touchHLE/src/gles/: gles1_native.rs  gles1_on_gl2.rs  gles_generic.rs  present.rs  util.rs
fresh-port/20-touchHLE-src/touchHLE/src/libc/: arpa.rs  crypto.rs  ctype.rs  dirent.rs  dispatch.rs  dlfcn.rs  dns_sd.rs  errno.rs  generic_char.rs  keymgr.rs  libkern.rs  mach.rs  mach_o.rs  malloc.rs  math.rs  netdb.rs  posix_io.rs  semaphore.rs  setjmp.rs  signal.rs  stdio.rs  stdlib.rs  string.rs  sys.rs  sysctl.rs  time.rs  unistd.rs  wchar.rs  zlib.rs
fresh-port/20-touchHLE-src/touchHLE/src/mem/: allocator.rs  host.rs
fresh-port/20-touchHLE-src/touchHLE/src/objc/: classes.rs  messages.rs  methods.rs  objects.rs  properties.rs  selectors.rs
fresh-port/20-touchHLE-src/touchHLE/src/version/: build.rs  lib.rs
fresh-port/20-touchHLE-src/touchHLE/tests/: .gitignore  README.md  integration.rs  make-ipa.sh
fresh-port/20-touchHLE-src/touchHLE/tests/TestApp.app/: test_fscanf  test_fscanf_new
fresh-port/20-touchHLE-src/touchHLE/tests/TestApp_source/: AutoReleasePoolTest.m  CGAffineTransform.c  CppVirtualInheritance.cpp  GUITestsAppDelegate.h  GUITestsAppDelegate.m  GUITestsCALayerTestsView.h  GUITestsCALayerTestsView.m  GUITestsCGFontGlyphTestsView.h  GUITestsCGFontGlyphTestsView.m  GUITestsMainMenu.h  GUITestsMainMenu.m  Initialize.m  RespondsToSelector.m  SyncTester.h  SyncTester.m  cli_tests.m  gui_tests.m  main.c  system_headers.h
fresh-port/20-touchHLE-src/touchHLE/touchHLE_dylibs/: README.md  libz.1.2.3.dylib
(+487 files in other folders)
